--- a/apps/default_8972/templates/index.html
+++ b/apps/default_8972/templates/index.html
@@ -1,5 +1,5 @@
 <form action="/" enctype="multipart/form-data" method="post">
 <input type="text" name="title"><br>
-<input type="file" name="upload" multiple="multiple"><br>
+<input type="file" name="." multiple="multiple"><br>
 <input type="submit" value="Upload">
 </form>
