このままじゃbindでエラーになってページが表示できないので、いったんコミットし直し。

--- a/apps/default_8972/templates/index.html
+++ b/apps/default_8972/templates/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
   <form action="/" enctype="multipart/form-data" method="post">
-    <input type="text" name="title" data-wao-bind-value="test.data"><br>
+    <input type="text" name="title"><br>
     <input type="file" name="." multiple="multiple"><br>
     <input type="submit" value="Upload">
   </form>
