update用にidを保持するhiddenタグを追加 local用のscriptにdata-wao="remove"を追加

--- a/apps/chosuke_8765/templates/schedule/newEvent/complete.html
+++ b/apps/chosuke_8765/templates/schedule/newEvent/complete.html
@@ -53,7 +53,7 @@
     <script type="text/javascript" src="../../bootstrap/js/bootstrap.min.js"></script>
     <script data-wao="remove" type="text/javascript" src="../../_LOCAL/bind-data.js"></script>
     <script data-wao="remove" type="text/javascript" src="../../_LOCAL/wao-bind.js"></script>
-    <script type="text/javascript">
+    <script data-wao="remove" type="text/javascript">
 $(function(){
   $('html').wao_bind({
     'bindData' : {
