--- a/apps/chosuke_8765/templates/schedule/list.html
+++ b/apps/chosuke_8765/templates/schedule/list.html
@@ -111,13 +111,13 @@
                     <td nowrap="nowrap">11/21(水) 19:00〜</td>
                     <td class="btn-group" data-toggle="buttons" role="group">
                       <div class="btn btn-default active">
-                        <input type="radio"><i class="fa fa-circle text-muted"></i></button>
+                        <input type="radio"><i class="fa fa-circle text-muted"></i>
                       </div>
                       <div class="btn btn-default">
-                        <input type="radio"><i class="fa fa-warning text-muted"></i></button>
+                        <input type="radio"><i class="fa fa-warning text-muted"></i>
                       </div>
                       <div class="btn btn-default">
-                        <input type="radio"><i class="fa fa-remove text-muted"></i></button>
+                        <input type="radio"><i class="fa fa-remove text-muted"></i>
                       </div>
                     </td>
                   </tr>
@@ -134,6 +134,7 @@
           </div>
           <button id="btn-submit" class="btn btn-success btn-lg col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2">更新する</button>
         </div>
+        <input type="hidden" name="event.id" data-wao-bind="event.id">
       </form>
     </div>
     <footer role="contentinfo">
@@ -145,7 +146,7 @@
     <script src="../bootstrap/js/bootstrap.min.js"></script>
     <script data-wao="remove" type="text/javascript" src="../_LOCAL/bind-data.js"></script>
     <script data-wao="remove" type="text/javascript" src="../_LOCAL/wao-bind.js"></script>
-    <script type="text/javascript">
+    <script data-wao="remove" type="text/javascript">
 $(function(){
   $('html').wao_bind({
     'bindData' : {
@@ -154,6 +155,10 @@ $(function(){
       '_USR'  : _USR
     }
   });
+});
+    </script>
+    <script type="text/javascript">
+$(function(){
   $('#btn-open').click(function(){
     $(this).hide();
     $('#reply').hide().removeClass('hidden')
