valueの綴りを間違えてた。。

--- a/apps/chosuke_8765/templates/schedule/list.html
+++ b/apps/chosuke_8765/templates/schedule/list.html
@@ -134,7 +134,7 @@
           </div>
           <button id="btn-submit" class="btn btn-success btn-lg col-md-8 col-md-offset-2 col-xs-8 col-xs-offset-2">更新する</button>
         </div>
-        <input type="hidden" name="event.id" data-wao-bind-vaule="event.id">
+        <input type="hidden" name="event.id" data-wao-bind-value="event.id">
       </form>
     </div>
     <footer role="contentinfo">
