ファイルアップロードサンプルをファイル操作サンプルに修正

--- a/apps/default_8972/templates/file.html
+++ b/apps/default_8972/templates/file.html
@@ -1,11 +1,12 @@
 <html>
   <head>
-    <title>ファイルアップロード</title>
+    <title>ファイル操作サンプル</title>
   </head>
   <body>
-    <h1>ファイルアップロードサンプル</h1>
-    WAOでファイルアップロードするサンプルです。
-    <h2>アップロード先のファイルパスを指定したファイルアップロード</h2>
+    <h1>ファイル操作サンプル</h1>
+    WAOでファイルを操作するサンプルです。
+    <h2>ファイルアップロード</h2>
+    <h3>アップロード先のファイルパスを指定したファイルアップロード</h3>
     /templates/fileupload/sample.png にファイルをアップロードする。
     <a href="/fileupload/sample.png" >アップロードする場所のリンク</a>
     <form method="post" enctype="multipart/form-data">
