--- a/apps/default_8972/templates/file.html
+++ b/apps/default_8972/templates/file.html
@@ -26,5 +26,22 @@
       <input type="hidden" name="_method" value="delete" />
       <button type="submit">アップロード</button>
     </form>
+
+    <h2>ファイル削除</h2>
+    /templates/fileupload/sample.png を消す。<br />
+    <a href="/fileupload/sample.png" >消すファイルが有る場所のリンク</a>
+    <form method="post">
+      <input type="hidden" name="_FILE" value="/templates/fileupload/sample.png" />
+      <input type="hidden" name="_method" value="delete" />
+      <button type="submit">ファイル削除</button>
+    </form>
+
+    <h2>ディレクトリ削除</h2>
+    /templates/fileeesss を消す。<br />
+    <form method="post">
+      <input type="hidden" name="_FILE" value="/templates/fileeesss" />
+      <input type="hidden" name="_method" value="delete" />
+      <button type="submit">ファイル削除</button>
+    </form>
   </body>
 </html>
